--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,28 @@
     <groupId>de.isb.mjelen</groupId>
     <artifactId>syscon-data-generator</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <dep.version.apache.poi>4.1.0</dep.version.apache.poi>
         <dep.version.pico.cli>4.0.2</dep.version.pico.cli>
         <dep.version.slf4j>1.7.21</dep.version.slf4j>
         <dep.version.javafaker>1.0.1</dep.version.javafaker>
+        <dep.version.lombok>1.18.10</dep.version.lombok>
+        <dep.version.sqlite>3.28.0</dep.version.sqlite>
+        <dep.version.eclipse-collections>10.0.0</dep.version.eclipse-collections>
+        <dep.version.opencsv>4.5</dep.version.opencsv>
     </properties>
 
     <dependencies>
@@ -36,6 +52,31 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${dep.version.slf4j}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${dep.version.lombok}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${dep.version.sqlite}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>${dep.version.opencsv}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
+            <version>${dep.version.eclipse-collections}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections</artifactId>
+            <version>${dep.version.eclipse-collections}</version>
+        </dependency>
     </dependencies>
 </project>
